changes font awesome link

--- a/src/main/resources/template/temp.html
+++ b/src/main/resources/template/temp.html
@@ -311,10 +311,9 @@ tr.header {
         /*-------------------------------*/
     </style>
     <!--    <script src="main.js">// External JS</script>-->
-    <!-- Angular JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <!-- Font Awesome for Icons -->
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"
+          rel="stylesheet" type='text/css'>
     <!-- Google Font for Status Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Chart JS -->
